src/global.css
/* ... */
.no-opacity {
  opacity: 0;
  pointer-events: none;
}

.full-opacity {
  opacity: 1;
}


.home-video-container {
  justify-content: center;
  border-radius: .5rem;
  display: flex;
  position: relative;
  overflow: hidden;
}

.landscape {
  max-width: 64vw;
  height: 100%
}

.portrait {
  max-width: 33vw;
  height: 100%
}

.work-title {
  pointer-events: none;
  letter-spacing: -.2vw;
  text-transform: uppercase;
  white-space: nowrap;
  word-break: keep-all;
  overflow-wrap: break-word;
  font-size: 7vw;
  line-height: .9;
  overflow: hidden;
}

.work-title.gray {
  color: #E5E5E5
}

.work-title.projects-title {
  font-size: 1vw;
  line-height: 110%;
  transition: opacity .2s;
  overflow: hidden;
  color: #1d1d1d
}

.work-title.mr-drag {
  margin-right: 4vw;
}

.text {
  font-family: Aeonik, sans-serif;
  cursor: default;
  color: #1d1d1d;
}

.text.description-info-awards {
  font-size: .9vw;
  line-height: 1.1vw;
}

.text.label-info-awards {
  color: #1d1d1d4d;
}

.work-h4 {
  font-size: 1vw;
  line-height: 130%;
}

.work-h4.gray {
  color: #9a9a9a;
}

.logo-marquee {
  max-width: 26vw;
}

.expertise-container {
  column-gap: 2vw;
  row-gap: 2vw;
  cursor: auto;
  border-radius: 8px;
  height: 100%;
  flex-flow: column;
  justify-content: flex-start;
  align-items: flex-start;
  padding-top: 0;
  padding-left: 0;
  padding-right: 0;
  text-decoration: none;
  transition: padding .4s cubic-bezier(.23, 1, .32, 1);
  display: flex;
  overflow: hidden;
}

.expertise-container.blue,
.expertise-container.magenta,
.expertise-container.green {
  transition: background-color .4s 
    cubic-bezier(.23, 1, .32, 1), padding .4s 
    cubic-bezier(.23, 1, .32, 1);
}

.expertise-container.blue:hover {
  background-color: #d5f2f6;;
}

.expertise-container.magenta:hover {
  background-color: #fbefff;;
}

.expertise-container.green:hover {
  background-color: #e5f4e1;
}

.expertise-image-container {
  column-gap: 2vw;
  row-gap: 2vw;
  border-radius: 8px;
  flex-flow: column;
  flex: 1;
  align-items: flex-start;
  width: 100%;
  transition: padding .4s cubic-bezier(.23, 1, .32, 1);
  display: flex;
  position: relative;
  overflow: hidden;
}

.expertise-image-container:hover {
  padding: 1.4vw
}

.brands-block-container {
  object-fit: fill;
  border-radius: 8px;
  align-items: flex-start;
  width: 100%;
  height: fit-content;
  overflow: hidden;
}

.single-brand-container {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #f6f6f6;
}

.single-brand-logo {
  z-index: 1;
  width: 100%;
  max-width: 65%;
  position: relative;
}

.single-brand-hover {
  border-radius: 8px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* Different colors for different brands */
.single-brand-hover._01 {
  background: #007bff;
}

.single-brand-hover._02 {
  background: #ff3008;
}

.single-brand-hover._03 {
  background: #5286ed;
}

.single-brand-hover._04 {
  background: #e61d2b;
}

.single-brand-hover._05 {
  background: #1db954;
}

.single-brand-hover._06 {
  background: #2259C2;
}

.single-brand-hover._07 {
  background: #ec3f43;
}

.single-brand-hover._08 {
  background: #000;
}

/* Hover state */
.single-brand-container:hover .single-brand-hover {
  width: 100% !important;
  height: 100% !important;
  opacity: 1 !important;
}

.w-node_01 {
  grid-area: span 2 / span 1 / span 2 / span 1
}

.w-node_02 {
  grid-area: 1 / 7 / 3 / 8
}

.w-node_03 {
  grid-area: 1 / 8 / 3 / 9
}

.w-node_04 {
  grid-area: 1 / 10 / 2 / 13
}

.w-node_05 {
  grid-area: 2 / 10 / 3 / 13;
}

.footer-links-container {
  column-gap: .7vw;
  row-gap: .7vw;
  flex-flow: column;
  align-items: flex-start;
  padding-left: .5vw;
  display: flex;
}

.footer-links.gray {
  color: #9a9a9a;
  cursor: default;
}

.footer-links {
  transition: opacity .2s;
}

.splide__pagination {
  position: relative !important;
  bottom: 0 !important;
  margin: 0;
  padding: 0 !important;
  display: flex;
  justify-content: center;
  gap: 1vw;
  margin-top: 2vw;
  height: 6px;
  overflow: hidden;
}

.module-slider {
  padding-top: 8dvw;
  padding-bottom: 8dvw;
}

.portfolio-container {
  column-gap: 1vw;
  row-gap: 1vw;
  align-items: flex-start;
  display: flex;
}

.inner-video {
  width: 100%;
  height: 100%;
  position: relative;
  aspect-ratio: 16 / 9;
}

.inner-video.expertise {
  aspect-ratio: 1;
  border-radius: .5rem;
  overflow: hidden;
}

.work-tags-container {
  z-index: 5;
  justify-content: space-between;
  align-self: flex-start;
  align-items: flex-start;
  width: 100%;
  padding-top: 1vw;
  padding-left: 1vw;
  padding-right: 1vw;
  display: flex;
  position: absolute;
}



.module-blocks {
  column-gap: 1vw;
  row-gap: 1vw;
  flex-flow: column;
  padding-top: 4vw;
  padding-left: 1vw;
  padding-right: 1vw;
  display: flex;
}

.work-plus {
  display: block;
}

.marquee-block-scroll {
  column-gap: 1dvw;
  row-gap: 1dvw;
  flex-flow: column;
  width: 100%;
  padding-top: 8dvw;
  padding-bottom: 8dvw;
  display: flex;
  overflow: hidden;
}

.awards .splide__list {
  display: flex;
  flex-flow: column;
  justify-content: flex-start;
  align-items: flex-start;
  width: 100%;
  margin-top: 0;
  margin-bottom: 0;
}

.items-awards {
  color: #1d1d1d;
  border-top: 1px solid #1d1d1d33;
  width: 100%;
  padding-top: 1.5dvw;
  padding-bottom: 2.5dvw;
  display: flex
}

.order-awards {
  width: 10%;
}

.client-awards {
  align-self: flex-start;
  width: 41%;
  font-size: 1.5dvw;
}

.award-year {
  text-align: right;
  width: 6%;
}

.swiper-wrapper {
  height: fit-content
}
/* ... */

